relay-general/src/pii/snapshots/relay_general__pii__processor__tests__scrub_span_data_is_scrubbed.snap
---
source: relay-general/src/pii/processor.rs
expression: span
---
{
  "data": {
    "http": {
      "query": "ccnumber=[Filtered]&process_id=123"
    }
  },
  "_meta": {
    "data": {
      "http": {
        "query": {
          "": {
            "rem": [
              [
                "@creditcard:filter",
                "s",
                9,
                19
              ]
            ],
            "len": 40
          }
        }
      }
    }
  }
}
