relay-general/src/pii/snapshots/relay_general__pii__processor__tests__scrub_span_data_object_is_scrubbed.snap
---
source: relay-general/src/pii/processor.rs
expression: span
---
{
  "data": {
    "http": {
      "query": {
        "ccnumber": "[Filtered]",
        "process_id": "123"
      }
    },
    "also_scrub": "[Filtered]"
  },
  "_meta": {
    "data": {
      "also_scrub": {
        "": {
          "rem": [
            [
              "@creditcard:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 16
        }
      },
      "http": {
        "query": {
          "ccnumber": {
            "": {
              "rem": [
                [
                  "@creditcard:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 16
            }
          }
        }
      }
    }
  }
}
