relay-general/src/pii/snapshots/relay_general__pii__processor__tests__span_default_rules.snap
---
source: relay-general/src/pii/processor.rs
expression: event
---
{
  "spans": [
    {
      "timestamp": 0.0,
      "start_timestamp": -63158400.0,
      "description": "[Filtered]",
      "span_id": "fa90fdead5f74052",
      "trace_id": "4c79f60c11214eb38604f4ae0781bfb2",
      "status": "ok"
    }
  ],
  "_meta": {
    "spans": {
      "0": {
        "description": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 56
          }
        }
      }
    }
  }
}
